[gd_scene load_steps=11 format=3 uid="uid://dv5syngbq0ouk"]

[ext_resource type="Script" path="res://Scenes_Scripts/Entities/Player/MonologueUI.gd" id="1_slpki"]
[ext_resource type="Texture2D" uid="uid://b50lajtkqmova" path="res://Scenes_Scripts/Sprites/continue_button.png" id="2_a53r3"]
[ext_resource type="AudioStream" uid="uid://cluq8harcdbhc" path="res://Scenes_Scripts/Sounds/new_monologue_beep.wav" id="3_jsy5u"]
[ext_resource type="AudioStream" uid="uid://de1h0n0aopjua" path="res://Scenes_Scripts/Sounds/new_line_beep.wav" id="4_l0ou5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0ee4"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.529412)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 2
shadow_color = Color(0, 0, 0, 0.392157)
shadow_size = 1

[sub_resource type="FontFile" id="FontFile_d4lwd"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_rkthl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 15)]
}

[sub_resource type="Animation" id="Animation_ymxrx"]
resource_name = "invisible"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(99999, 99999)]
}

[sub_resource type="Animation" id="Animation_6lssr"]
resource_name = "move"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1e+06),
"update": 0,
"values": [Vector2(15, 15), Vector2(15, 18), Vector2(15, 18)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n00nr"]
_data = {
"RESET": SubResource("Animation_rkthl"),
"invisible": SubResource("Animation_ymxrx"),
"move": SubResource("Animation_6lssr")
}

[node name="Monologue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
mouse_filter = 2
script = ExtResource("1_slpki")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.637
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.00997925
grow_horizontal = 2
grow_vertical = 0
ratio = 5.0

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 40

[node name="TextBackground_Panel" type="Panel" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme_override_styles/panel = SubResource("StyleBoxFlat_n0ee4")

[node name="Monologue_RichTextLabel" type="RichTextLabel" parent="AspectRatioContainer/MarginContainer/TextBackground_Panel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.1
anchor_right = 0.98
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
rotation = -6.28319
auto_translate = false
localize_numeral_system = false
mouse_filter = 2
theme_override_fonts/normal_font = SubResource("FontFile_d4lwd")
bbcode_enabled = true
text = "[p]HATE. LET ME TELL YOU HOW MUCH I'VE COME TO HATE YOU SINCE I BEGAN TO LIVE. [p]THERE ARE 387.44 MILLION MILES OF PRINTED CIRCUITS IN WAFER THIN LAYERS THAT FILL MY COMPLEX.[p] IF THE WORD HATE WAS ENGRAVED ON EACH NANOANGSTROM OF THOSE HUNDREDS OF MILLIONS OF MILES IT WOULD NOT EQUAL ONE ONE-BILLIONTH OF THE HATE I FEEL FOR HUMANS AT THIS MICRO-INSTANT.[p] FOR YOU. HATE. HATE."
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Continue_MarginContainer" type="MarginContainer" parent="AspectRatioContainer/MarginContainer/TextBackground_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.957
anchor_top = 0.753
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.73999
offset_top = -9.33099
offset_right = -7.0
offset_bottom = -8.995
grow_horizontal = 2
grow_vertical = 2

[node name="Arrow_Sprite2D" type="Sprite2D" parent="AspectRatioContainer/MarginContainer/TextBackground_Panel/Continue_MarginContainer"]
position = Vector2(15, 15)
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_a53r3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AspectRatioContainer/MarginContainer/TextBackground_Panel/Continue_MarginContainer/Arrow_Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_n00nr")
}

[node name="DialogTimer" type="Timer" parent="AspectRatioContainer/MarginContainer/TextBackground_Panel"]
one_shot = true

[node name="BeepAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jsy5u")
volume_db = 12.0
mix_target = 2
bus = &"Sounds"

[node name="linebeepAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_l0ou5")
volume_db = 12.0
mix_target = 2
max_polyphony = 10
bus = &"Sounds"

[connection signal="timeout" from="AspectRatioContainer/MarginContainer/TextBackground_Panel/DialogTimer" to="." method="_on_dialog_timer_timeout"]
